Main section styling

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	font-family: 'Inter', sans-serif;
+	background: #282d35;
 }
 
 .navbar {
@@ -28,4 +29,23 @@ body {
 	color: #deebf8;
 	font-weight: 600;
 	font-size: 16px;
+}
+
+.main {
+	margin-top: 57px;
+	margin-left: 30px;
+	color: white;
+}
+
+.mainHeader {
+	margin: 0;
+	font-weight: 700;
+	margin-bottom: 46px;
+	font-size: 39px;
+}
+
+.mainText > li {
+	font-weight: 400;
+	font-size: 16px;
+	margin-bottom: 20px;
 }
